tests/fixtures/invalid/parse_errors/unclosed_string.luma
-- Unclosed string literal
let message = "Hello World
